--- a/assets/index.html
+++ b/assets/index.html
@@ -15,8 +15,8 @@
 <body>
     <section id="headertop">
         <header>
-            <div >
-                <div class="row">
+            <div class="">
+                <div class="row justify-content-center">
                     <div class="main-menu">
                         <div class="about-us">
                             <a href="">About Us</a>
@@ -63,6 +63,33 @@
             </div>
         </header>
     </section>
-</body>
-<script src="./js/script.js"></script>
-</html>
+
+    <section>
+        <div class="container">
+            <div class="row">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container-fluid">
+                      <a class="navbar-brand" href="#">
+                        <img src="./img/bacola-logo.png" alt="">
+                        <span>Online Grocery Shopping Center</span>
+                      </a>
+                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
+                      <div class="collapse navbar-collapse" id="navbarNav">
+                        <div class="selectLocation">
+                            <a href="">
+                                <p class="yourL">Your Location</p>
+                                <p class="selectL">Select a Location</p>
+                            </a>
+                        </div>
+                      </div>
+                    </div>
+                  </nav>
+            </div>
+        </div>
+    </section>
+    </body>
+    <script src="./js/script.js"></script>
+    
+    </html>
