--- a/assets/index.html
+++ b/assets/index.html
@@ -9,13 +9,13 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./scss/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Home page</title>
 </head>
 <body>
     <section id="headertop">
         <header>
-            <div class="">
+            <div class="containe">
                 <div class="row justify-content-center">
                     <div class="main-menu">
                         <div class="about-us">
@@ -67,7 +67,7 @@
     <section>
         <div class="container">
             <div class="row">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <nav class="navbar navbar-expand-lg navbar-light">
                     <div class="container-fluid">
                       <a class="navbar-brand" href="#">
                         <img src="./img/bacola-logo.png" alt="">
@@ -80,7 +80,25 @@
                         <div class="selectLocation">
                             <a href="">
                                 <p class="yourL">Your Location</p>
-                                <p class="selectL">Select a Location</p>
+                                <p class="selectL"><b>Select a Location</b></p>
+                                <i class="fa-solid fa-chevron-down"></i>
+                            </a>
+                        </div>
+                        <form class="d-flex" id="form">
+                            <input class="form-control me-2" type="search" placeholder="Search for products..." aria-label="Search">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </form>
+                        <div class="user">
+                            <a href=""><i class="fa-regular fa-user"></i></a>
+                        </div>
+                        <div class="price">
+                            <a href="">
+                                <span>$0.00</span>
+                            </a>
+                        </div>
+                        <div class="basket">
+                            <a href="">
+                                <i class="fa-solid fa-basket-shopping"></i>
                             </a>
                         </div>
                       </div>
@@ -88,6 +106,12 @@
                   </nav>
             </div>
         </div>
+    </section>
+
+
+
+    <section>
+
     </section>
     </body>
     <script src="./js/script.js"></script>
