--- a/assets/index.html
+++ b/assets/index.html
@@ -99,6 +99,7 @@
                         <div class="basket">
                             <a href="">
                                 <i class="fa-solid fa-basket-shopping"></i>
+                                <div class="circle">0</div>
                             </a>
                         </div>
                       </div>
@@ -109,10 +110,56 @@
     </section>
 
 
-
     <section>
-
+        <div class="container">
+            <div class="row">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container-fluid">
+                      <a class="navbar-brand" href="#">
+                        <div class="allCategories">
+                            <i class="fa-solid fa-bars"></i>
+                            <span>ALL CATEGORIES</span>
+                            <i class="fa-solid fa-chevron-down"></i>
+                        </div>
+                      </a>
+                      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                        <ul class="navbar-nav">
+                          <li class="nav-item">
+                            <a class="nav-link active home" aria-current="page" href="#">HOME
+                                <i class="fa-solid fa-chevron-down"></i>
+                            </a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link active shop" href="#">SHOP
+                                <i class="fa-solid fa-chevron-down"></i>
+                            </a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link active meat" href="#">
+                                <img src="./img/meat.png" alt="">
+                                MEATS&SEAFOOD</a>
+                          </li>
+                          <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              Dropdown link
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                              <li><a class="dropdown-item" href="#">Action</a></li>
+                              <li><a class="dropdown-item" href="#">Another action</a></li>
+                              <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </nav>
+            </div>
+        </div>
     </section>
+
+
+
+    
     </body>
     <script src="./js/script.js"></script>
     
