--- a/assets/index.html
+++ b/assets/index.html
@@ -120,6 +120,7 @@
                             <i class="fa-solid fa-bars"></i>
                             <span>ALL CATEGORIES</span>
                             <i class="fa-solid fa-chevron-down"></i>
+                            <div class="products63">TOTAL 63 PRODUCTS</div>
                         </div>
                       </a>
                       <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -136,10 +137,33 @@
                           </li>
                           <li class="nav-item">
                             <a class="nav-link active meat" href="#">
-                                <img src="./img/meat.png" alt="">
-                                MEATS&SEAFOOD</a>
+                                <img src="./img/icons8-meat-32.png" alt="">
+                                MEATS & SEAFOOD</a>
                           </li>
-                          <li class="nav-item dropdown">
+                          <li class="nav-item">
+                            <a class="nav-link active bakery" href="#">
+                                <img src="./img/icons8-biscuits-80 (1).png" alt="">
+                                <span>BAKERY</span>
+                            </a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link active beverages" href="#">
+                                <img src="./img/icons8-mug.png" alt="">
+                                <span>BEVERAGES</span>
+                            </a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link active blog" href="#">BLOG
+                            </a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link active contact" href="#">CONTACT
+                            </a>
+                          </li>
+
+
+
+                          <!-- <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                               Dropdown link
                             </a>
@@ -147,13 +171,29 @@
                               <li><a class="dropdown-item" href="#">Action</a></li>
                               <li><a class="dropdown-item" href="#">Another action</a></li>
                               <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
+                            </ul> -->
                           </li>
                         </ul>
                       </div>
                     </div>
                   </nav>
             </div>
+        </div>
+    </section>
+
+
+    <section>
+        <div class="slider">
+            <div class="images">
+                <div class="item1">
+                    <img src="./img/slider-image-6.jpg" alt="">
+                    <span>Exclusive offer -20% off</span>
+
+
+                </div>
+                <div class="item2"><img src="./img/slider-image-7.jpg" alt=""></div>
+            </div>
+            
         </div>
     </section>
 
