--- a/assets/index.html
+++ b/assets/index.html
@@ -216,10 +216,71 @@
 
 
     <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-2" style="background-color: red; width:300px; height:100px;"></div>
-                <div class="col-10" style="background-color: green; width:840px; height:100px;"></div>
+        <div class="container classifications">
+            <div class="row d-flex">
+                <div class="col-3 bev" style="background-color: white; height:300px;">
+                  <div class="boxBev">
+                    <img src="./img/baverages-1.jpg" alt="">
+                  </div>
+                  <div class="contentBev">
+                    <span>Beverages</span>
+                    <p>11 Items</p>
+                  </div>
+                  
+                </div>
+                <div class="col-9 d-flex other" style="background-color: white; height:300px;">
+                  <div class="col-3">
+
+
+
+                    <div class="boxes bisSn" style="background-color: white; height:150px;">
+                      <div class="boxBis">
+                        <a href=""><img src="./img/biscuitssnacks-1.jpg" alt=""></a>
+                      </div>
+                      <div class="contentBis">
+                        <a href="">
+                          <p>Biscuits & Snacks</p>
+                          <p id="bisItem">6 Items</p>
+                        </a>
+                      </div>
+                    </div>
+
+
+
+
+
+
+
+                    <div class="boxes frVe" style="background-color:white; height:150px">
+                      <div class="boxFrVe">
+                        <a href="">
+                        <img src="./img/fruitvegetables-1.jpg" alt="">
+                        </a>
+                      </div>
+                      <div class="contentFrVe">
+                        <a href="">
+                          <p>Fruits & Vegetables</p>
+                          <p id="frItems">12 Items</p>
+
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-3" >
+                    <div class="boxes brBa" style="background-color: white; height:150px"></div>
+                    <div class="boxes grSt" style="background-color:white; height:150px"></div>
+                  
+                  </div>
+                  <div class="col-3" >
+                    <div class="boxes brDa" style="background-color: white; height:150px;"></div>
+                    <div class="boxes hoNe" style="background-color: white; height:150px;"></div>
+                  </div>
+                  <div class="col-3" >
+                    <div class="boxes frFo" style="background-color: white; height:150px;"></div>
+                    <div class="boxes meSe" style="background-color:white; height:150px;"></div>
+                  </div>
+
+                </div>
             </div>
         </div>
     </section>
