--- a/assets/index.html
+++ b/assets/index.html
@@ -603,18 +603,28 @@
           </div>
         </div>
       </div>
-    </section>
-
-
-    <section>
       <div class="container">
         <div class="row">
+          <div class="col-12">
+            <div class="bestSellers">
+              <h4>BEST SELLERS</h4>
+              <p>Do not miss the current offers until the end of March.</p>
+              <div class="view">
+                <a href="">View All
+                  <i class="fa-solid fa-arrow-right-long"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div id="slider" class="container ">
+        <div class="row" style="border:1px solid #dbdce0; border-radius:7px; height: 440px; margin-top:-88px;">
           <div class="splide">
             <div class="splide__track">
               <div class="splide__list">
-
-
-
                 <div class="splide__slide italian">
                   <div class="prImg">
                     <div class="prPercent">
@@ -642,28 +652,9 @@
                       <span style="text-decoration: line-through;">$5.49</span>
                       <span id="newPrice">$4.49</span>
                     </div>
+                    <button class="btn btn-warning yellowBtn">Add to cart</button>
                   </div>
                 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                 <div class="splide__slide boom">
                   <div class="prImg">
                     <div class="prPercent">
@@ -688,13 +679,9 @@
                       <span style="text-decoration: line-through;">$79.99</span>
                       <span id="newPrice">$49.99</span>
                     </div>
+                    <button class="btn btn-warning yellowBtn" style="margin-left: 15px;">Add to cart</button>
                   </div>
                 </div>
-
-
-
-
-
                 <div class="splide__slide italian">
                   <div class="prImg">
                     <div class="prPercent">
@@ -722,20 +709,9 @@
                       <span style="text-decoration: line-through;">$9.35</span>
                       <span id="newPrice">$7.25</span>
                     </div>
+                    <button class="btn btn-warning yellowBtn" style="margin-left: 17px;">Read more</button>
                   </div>
                 </div>
-
-
-
-
-
-
-
-
-
-
-
-
                 <div class="splide__slide boom">
                   <div class="prImg">
                     <div class="prPercent">
@@ -760,27 +736,9 @@
                       <span style="text-decoration: line-through;">$4.29</span>
                       <span id="newPrice">$3.29</span>
                     </div>
+                    <button class="btn btn-warning yellowBtn" style="margin-left: 17px;">Add to cart</button>
                   </div>
                 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                 <div class="splide__slide chao">
                   <div class="prImg">
                     <div class="prPercent">
@@ -808,31 +766,9 @@
                       <span style="text-decoration: line-through;">$24.00</span>
                       <span id="newPrice">$19.50</span>
                     </div>
+                    <button class="btn btn-warning yellowBtn" style="margin-left:17px">Add to cart</button>
                   </div>
                 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                 <div class="splide__slide diamond">
                   <div class="prImg">
                     <div class="prPercent">
@@ -860,36 +796,9 @@
                       <span style="text-decoration: line-through;">$11.68</span>
                       <span id="newPrice">$10.58</span>
                     </div>
+                    <button class="btn btn-warning yellowBtn" style="margin-left: 17px;">Add to cart</button>
                   </div>
                 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                 <div class="splide__slide diamond">
                   <div class="prImg">
                     <div class="prPercent">
@@ -917,37 +826,9 @@
                       <span style="text-decoration: line-through;">$6.77</span>
                       <span id="newPrice">$4.85</span>
                     </div>
+                    <button class="btn btn-warning yellowBtn" style="margin-left: 17px;">Add to cart</button>
                   </div>
                 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                
                 <div class="splide__slide boom">
                   <div class="prImg">
                     <div class="prPercent">
@@ -972,20 +853,303 @@
                       <span style="text-decoration: line-through;">$32.49</span>
                       <span id="newPrice">$27.49</span>
                     </div>
+                    <button class="btn btn-warning yellowBtn" style="margin-left: 17px;">Add to cart</button>
                   </div>
                 </div>
-
-
-
-
-
-
-
-
-
               </div>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container save">
+        <div class="row">
+          <div class="col-12">
+            <a href="">
+              <div class="box">Save an Extra 5-10 % On Every Autoship Order!</div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container productsLists">
+        <div class="row">
+          <div class="col italian" style="border: 1px solid #dbdce0; border-top-left-radius:7px;">
+            <div class="prImg">
+              <div class="prPercent">
+                <p>26%</p>
+              </div>
+              <img src="./img/product-image-346x310.jpg" alt="">
+            </div>
+            <div class="contentItalian">
+              <a href="">
+                <p>Zevia Kidz Strawberry Lemonade Zero Calorie...</p>
+              </a>
+              <p id="stockin">IN STOCK</p>
+              <div class="rate">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <span>1</span>
+              </div>
+              <div class="priceItalian">
+                <span style="text-decoration: line-through;">$7.95</span>
+                <span id="newPrice">$5.95</span>
+              </div>
+            </div>
+          </div>
+          <div class="col italian" style="border-top: 1px solid #dbdce0; border-bottom:1px solid #dbdce0;">
+            <div class="prImg">
+              <div class="prPercent">
+                <p>40%</p>
+              </div>
+              <img src="./img/product-image-2-346x310.jpg" alt="">
+            </div>
+            <div class="contentItalian">
+              <a href="">
+                <p>Wheat Thins Original Crackers</p>
+              </a>
+              <p id="stockin">IN STOCK</p>
+              <div class="rate">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <span>1</span>
+              </div>
+              <div class="priceItalian">
+                <span style="text-decoration: line-through;">$5.00</span>
+                <span id="newPrice">$3.00</span>
+              </div>
+            </div>
+          </div>
+          <div class="col italian" style="border-top:1px solid #dbdce0; border-bottom:1px solid #dbdce0;">
+            <div class="prImg">
+              <div class="prPercent">
+                <p>26%</p>
+              </div>
+              <img src="./img/product-image-3-346x310.jpg" alt="">
+            </div>
+            <div class="contentItalian">
+              <a href="">
+                <p>Werther’s Original Caramel Hard Candies</p>
+              </a>
+              <p id="stockin">IN STOCK</p>
+              <div class="rate">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <span>1</span>
+              </div>
+              <div class="priceItalian">
+                <span style="text-decoration: line-through;">$20.00</span>
+                <span id="newPrice">$14.97</span>
+              </div>
+            </div>
+          </div>
+          <div class="col italian" style="border-top:1px solid #dbdce0; border-bottom:1px solid #dbdce0;">
+            <div class="prImg">
+              <div class="prPercent">
+                <p>26%</p>
+              </div>
+              <img src="./img/product-image-4-346x310.jpg" alt="">
+            </div>
+            <div class="contentItalian">
+              <a href="">
+                <p>Warrior Blend Organic</p>
+              </a>
+              <p id="stockin">IN STOCK</p>
+              <div class="rate">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star unrateable"></i>
+                <i class="fa-solid fa-star unrateable"></i>
+                <span>1</span>
+              </div>
+              <div class="priceItalian">
+                <span style="text-decoration: line-through;">$39.00</span>
+                <span id="newPrice">$29.00</span>
+              </div>
+            </div>
+          </div>
+          <div class="col italian" style="border-top:1px solid #dbdce0; border-bottom:1px solid #dbdce0; border-top-right-radius:7px;">
+            <div class="prImg">
+              <div class="prPercent">
+                <p>14%</p>
+              </div>
+              <img src="./img/product-image-5-346x310.jpg" alt="">
+            </div>
+            <div class="contentItalian">
+              <a href="">
+                <p>Vital Farms Pasture-Raised Egg Bites Bacon & Cheddar</p>
+              </a>
+              <p id="stockin">IN STOCK</p>
+              <div class="rate">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star unrateable"></i>
+                <span>1</span>
+              </div>
+              <div class="priceItalian">
+                <span style="text-decoration: line-through;">$29.00</span>
+                <span id="newPrice">$25.00</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container productsLists" style="margin-top:-71px;">
+        <div class="row">
+          <div class="col italian" style="border: 1px solid #dbdce0; border-bottom-left-radius:7px;">
+            <div class="prImg">
+              <div class="prPercent">
+                <p>38%</p>
+              </div>
+              <img src="./img/product-image-7-346x310.jpg" alt="">
+            </div>
+            <div class="contentItalian">
+              <a href="">
+                <p>USDA Choice Angus Beef Stew Meat</p>
+              </a>
+              <p id="stockin">IN STOCK</p>
+              <div class="rate">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star unrateable"></i>
+                <span>1</span>
+              </div>
+              <div class="priceItalian">
+                <span style="text-decoration: line-through;">$79.99</span>
+                <span id="newPrice">$49.99</span>
+              </div>
+            </div>
+          </div>
+          <div class="col italian" style="border-top: 1px solid #dbdce0; border-bottom:1px solid #dbdce0;">
+            <div class="prImg">
+              <div class="prPercent">
+                <p>31%</p>
+              </div>
+              <img src="./img/product-image-9-346x310.jpg" alt="">
+            </div>
+            <div class="contentItalian">
+              <a href="">
+                <p>Tropicana Pineapple Mango Drink</p>
+              </a>
+              <p id="stockin">IN STOCK</p>
+              <div class="rate">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star unrateable"></i>
+                <span>1</span>
+              </div>
+              <div class="priceItalian">
+                <span style="text-decoration: line-through;">$3.29</span>
+                <span id="newPrice">$2.29</span>
+              </div>
+            </div>
+          </div>
+          <div class="col italian" style="border-top:1px solid #dbdce0; border-bottom:1px solid #dbdce0;">
+            <div class="prImg">
+              <div class="prPercent">
+                <p>15%</p>
+              </div>
+              <img src="./img/product-image-11-346x310.jpg" alt="">
+            </div>
+            <div class="contentItalian">
+              <a href="">
+                <p>Organic Sweet Lime</p>
+              </a>
+              <p id="stockin">IN STOCK</p>
+              <div class="rate">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star unrateable"></i>
+                <span>1</span>
+              </div>
+              <div class="priceItalian">
+                <span style="text-decoration: line-through;">$6.99</span>
+                <span id="newPrice">$5.99</span>
+              </div>
+            </div>
+          </div>
+          <div class="col italian" style="border-top:1px solid #dbdce0; border-bottom:1px solid #dbdce0;">
+            <div class="prImg">
+              <div class="prPercent">
+                <p>25%</p>
+              </div>
+              <img src="./img/product-image-12-346x310.jpg" alt="">
+            </div>
+            <div class="contentItalian">
+              <a href="">
+                <p>Fresh Organic Strawberry</p>
+              </a>
+              <p id="stockin">IN STOCK</p>
+              <div class="rate">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <span>1</span>
+              </div>
+              <div class="priceItalian">
+                <span style="text-decoration: line-through;">$12.00</span>
+                <span id="newPrice">$9.00</span>
+              </div>
+            </div>
+          </div>
+          <div class="col italian" style="border-top:1px solid #dbdce0; border-bottom:1px solid #dbdce0; border-bottom-right-radius:7px;">
+            <div class="prImg">
+              <div class="prPercent">
+                <p>21%</p>
+              </div>
+              <img src="./img/product-image-14-346x310.jpg" alt="">
+            </div>
+            <div class="contentItalian">
+              <a href="">
+                <p>Sol-ti Coconut Charcoal SuperAde</p>
+              </a>
+              <p id="stockin">IN STOCK</p>
+              <div class="rate">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star unrateable"></i>
+                <span>1</span>
+              </div>
+              <div class="priceItalian">
+                <span style="text-decoration: line-through;">$4.97</span>
+                <span id="newPrice">$3.97</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-4"></div>
+          <div class="col-4"></div>
+          <div class="col-4"></div>
         </div>
       </div>
     </section>
