--- a/assets/blog.html
+++ b/assets/blog.html
@@ -119,6 +119,21 @@
                             <span>ALL CATEGORIES</span>
                             <i class="fa-solid fa-chevron-down"></i>
                             <div class="products63">TOTAL 63 PRODUCTS</div>
+                            <div class="miniCategory" style="z-index: 1; display:none;">
+                              <div class="miniCat" style="width: 300px; height:333px; background-color: white; margin-top:52px; margin-left:-140px;">
+                                <div class="d-flex" style="font-size: 16px; padding:5px 16px;">
+                                  <i class="fa-solid fa-apple-whole"></i>
+                                  <p style="margin-left: 10px;">Fruits & Vegetables</p>
+                                </div>
+                                <div class="d-flex" style="font-size: 16px; padding:0px 16px;"><i class="fa-solid fa-bacon"></i><p style="margin-left: 10px;">Meats & Seafood</p></div>
+                                <div class="d-flex" style="font-size: 16px; padding:0px 16px;"><i class="fa-solid fa-egg"></i><p style="margin-left: 10px;">Breakfast & Dairy</p></div>
+                                <div class="d-flex" style="font-size: 16px; padding:0px 16px;"><i class="fa-solid fa-mug-hot"></i><p style="margin-left: 10px;">Beverages</p></div>
+                                <div class="d-flex" style="font-size: 16px; padding:0px 16px;"><i class="fa-solid fa-cookie"></i><p style="margin-left: 10px;">Breads & Bakery</p></div>
+                                <div class="d-flex" style="font-size: 16px; padding:0px 16px;"><i class="fa-solid fa-snowflake"></i><p style="margin-left: 10px;">Frozen Foods</p></div>
+                                <div class="d-flex" style="font-size: 16px; padding:0px 16px;"><i class="fa-solid fa-candy-cane"></i><p style="margin-left: 10px;">Biscuits & Snacks</p></div>
+                                <div class="d-flex" style="font-size: 16px; padding:0px 16px;"><i class="fa-brands fa-envira"></i><p style="margin-left: 10px;">Grocery & Staples</p></div>
+                              </div>
+                            </div>
                         </div>
                       </a>
                       <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -554,4 +569,5 @@
         </div>
     </section>
 </body>
+<script src="./js/blog.js"></script>
 </html>
